Fixed date range field calendar icon alignment

--- a/src/project/scss/_base/_grid.scss
+++ b/src/project/scss/_base/_grid.scss
@@ -595,6 +595,10 @@ section.emp-tabs div.emp-tab-contents {
         }
     }
 
+    fieldset .emp-fieldset-contents .emp-date{
+        margin-right: 3px !important;
+    }
+
     .emp-table table td{
         .emp-field{
             display: inline-block;
