--- a/src/project/scss/_base/_theme.scss
+++ b/src/project/scss/_base/_theme.scss
@@ -266,8 +266,8 @@ $sectionHeaderBackgroundColor: #e7e7e6;
 
         .cui-data button.cui-c-datepicker{
             background-color: initial;
-            height:24px;
-            width:24px !important;
+            height:25px;
+            width:25px !important;
             padding:2px 0px;
         }
 
